devopszon-dev/shopping-client/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shopping-client
    service: shopping-client
  name: shopping-client
  namespace: shopping
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    service: shopping-client
  type: ClusterIP
