devopszon-dev/shopping-client/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-client
  namespace: shopping
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '100m'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '60'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '60'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '60'
    nginx.ingress.kubernetes.io/rewrite-target: '/'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: www.shopping-client.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopping-client
                port:
                  number: 80
  tls:
  - hosts:
    - www.shopping-client.com
    secretName: shopping-client-ingress-secret
